k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ehes-app
  labels:
    name: ehes-app
